# exif-data-stripper

./: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py
src/: __main__.py
src/exif_util/: cli.py  helpers.py  logger.py  process_exif_data.py
tests/: conftest.py  test_exif_tags.py  test_helpers.py  test_processor.py
